# AzureMySdk

./: .gitignore  AGENTS.md  README.md
src/infra/azure_api/network/: pyproject.toml
src/resources/abstract/builder/: resource_factory.py
src/resources/abstract/model/: base_class.py  base_class_values.py
src/resources/common/model/: common_class.py  common_class_values.py
src/resources/network/model/common/: common_network_data_value.py
src/resources/network/model/virtual_network/: subnet.py  virtual_netowrk.py  virtual_network_data_values.py
tests/: conftest.py
tests/resources/abstract/: test_name_rule.py
tests/resources/common/: test_common_class.py
tests/resources/network/model/virtual_network/: test_virtual_network.py
