[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-operator"
version = "0.1.0"
description = "Internal AzureOperator project"
readme = "AGENTS.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=23",
  "ruff>=0.5",
  "mypy>=1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

